--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    
     "strict": true,
+    "strictPropertyInitialization": false,
+    "strictNullChecks": false,
+
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
